<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#aa000000"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/WelcomeScreen_contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_margin="@dimen/m10"
        android:background="@drawable/quote_border_pink"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageView
                android:id="@+id/auth_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                style="@style/text_quotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m3"
                android:gravity="center"
                android:text="@string/welcome_screen_main_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />
        </LinearLayout>

        <View
            android:id="@+id/View03"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#dddddd" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m5"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginRight="@dimen/m20"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/m3" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_main_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#dddddd" />

                <TextView
                    style="@style/text_quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m3"
                    android:gravity="center"
                    android:text="@string/welcome_screen_shows_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_shows_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:id="@+id/View01"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#dddddd" />

                <TextView
                    style="@style/text_quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m3"
                    android:gravity="center"
                    android:text="@string/welcome_screen_quiz_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_quiz_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:id="@+id/View02"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#dddddd" />

                <TextView
                    style="@style/text_quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m3"
                    android:gravity="center"
                    android:text="@string/welcome_screen_settings_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_settings_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:id="@+id/View05"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#dddddd" />

                <TextView
                    style="@style/text_quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m3"
                    android:gravity="center"
                    android:text="@string/welcome_screen_language_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_language_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:id="@+id/View04"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#dddddd" />

                <TextView
                    style="@style/text_quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m3"
                    android:gravity="center"
                    android:text="@string/welcome_screen_social_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m5"
                    android:gravity="center"
                    android:text="@string/welcome_screen_social_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/WelcomeScreen_startButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m5"
                android:layout_marginRight="@dimen/m5"
                android:layout_weight="1"
                android:text="@string/welcome_screen_thanks" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>