<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/m10"
        android:background="@drawable/quote_border_pink"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/text_quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m3"
            android:text="@string/score_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="serif" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ScoresScreen_contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m5"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginRight="@dimen/m20"
                android:layout_marginTop="@dimen/m5"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/m3" >
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ScoresScreen_clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_scores" />

            <Button
                android:id="@+id/ScoresScreen_retryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/retry_quiz" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>